# CS126-Final-Project

./: CMakeLists.txt  PROPOSAL.md  README.md  cinder_app_main.cpp
apps/: cinder_app_main.cpp
include/: basketball.h  shooter.h  shooting_simulator.h
src/: basketball.cpp  shooter.cpp  shooting_simulator.cpp
tests/: basketball_test.cpp  shooting_game_test.cpp
